gcc/testsuite/g++.dg/parse/error57.C
// PR c++/52987

int foo(x a) {  // { dg-error "9:'x' was not declared in this scope" }
}
